# weather_context

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
generate_temperature_tweet/: generate_tweets.py  plot_functions.py
send_tweet/: README.md  send_tweet.py
src/frontend/: app.py
v1/: requirements.txt
v1/bom_update/: bom_update.py
v1/generate_temperature_tweet/: README.md  generate_tweets.py  s3_functions.py
v1/scrap_bom/: scrap_bom.py
